// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render component when a user is logged in 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Navbar
    auth={
      Object {
        "isAuthenticated": true,
        "user": Object {},
      }
    }
    clearCurrentProfile={[MockFunction]}
    logoutUser={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <nav
        className="header__nav"
      >
        <ul>
          <li>
            <Link
              className="header__nav-item"
              replace={false}
              to="/dashboard"
            >
              <p>
                Menu
              </p>
            </Link>
          </li>
          <li>
            <Link
              className="header__nav-item"
              replace={false}
              to="/register"
            >
              <p>
                Settings
              </p>
            </Link>
          </li>
          <li>
            <div
              className="header__nav-item"
              onClick={[Function]}
            >
              <p>
                Logout
              </p>
            </div>
          </li>
        </ul>
      </nav>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <ul>
          <li>
            <Link
              className="header__nav-item"
              replace={false}
              to="/dashboard"
            >
              <p>
                Menu
              </p>
            </Link>
          </li>
          <li>
            <Link
              className="header__nav-item"
              replace={false}
              to="/register"
            >
              <p>
                Settings
              </p>
            </Link>
          </li>
          <li>
            <div
              className="header__nav-item"
              onClick={[Function]}
            >
              <p>
                Logout
              </p>
            </div>
          </li>
        </ul>,
        "className": "header__nav",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              <Link
                className="header__nav-item"
                replace={false}
                to="/dashboard"
              >
                <p>
                  Menu
                </p>
              </Link>
            </li>,
            <li>
              <Link
                className="header__nav-item"
                replace={false}
                to="/register"
              >
                <p>
                  Settings
                </p>
              </Link>
            </li>,
            <li>
              <div
                className="header__nav-item"
                onClick={[Function]}
              >
                <p>
                  Logout
                </p>
              </div>
            </li>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="header__nav-item"
                replace={false}
                to="/dashboard"
              >
                <p>
                  Menu
                </p>
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <p>
                  Menu
                </p>,
                "className": "header__nav-item",
                "replace": false,
                "to": "/dashboard",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Menu",
                },
                "ref": null,
                "rendered": "Menu",
                "type": "p",
              },
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="header__nav-item"
                replace={false}
                to="/register"
              >
                <p>
                  Settings
                </p>
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <p>
                  Settings
                </p>,
                "className": "header__nav-item",
                "replace": false,
                "to": "/register",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Settings",
                },
                "ref": null,
                "rendered": "Settings",
                "type": "p",
              },
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="header__nav-item"
                onClick={[Function]}
              >
                <p>
                  Logout
                </p>
              </div>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <p>
                  Logout
                </p>,
                "className": "header__nav-item",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Logout",
                },
                "ref": null,
                "rendered": "Logout",
                "type": "p",
              },
              "type": "div",
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
      "type": "nav",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <nav
          className="header__nav"
        >
          <ul>
            <li>
              <Link
                className="header__nav-item"
                replace={false}
                to="/dashboard"
              >
                <p>
                  Menu
                </p>
              </Link>
            </li>
            <li>
              <Link
                className="header__nav-item"
                replace={false}
                to="/register"
              >
                <p>
                  Settings
                </p>
              </Link>
            </li>
            <li>
              <div
                className="header__nav-item"
                onClick={[Function]}
              >
                <p>
                  Logout
                </p>
              </div>
            </li>
          </ul>
        </nav>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ul>
            <li>
              <Link
                className="header__nav-item"
                replace={false}
                to="/dashboard"
              >
                <p>
                  Menu
                </p>
              </Link>
            </li>
            <li>
              <Link
                className="header__nav-item"
                replace={false}
                to="/register"
              >
                <p>
                  Settings
                </p>
              </Link>
            </li>
            <li>
              <div
                className="header__nav-item"
                onClick={[Function]}
              >
                <p>
                  Logout
                </p>
              </div>
            </li>
          </ul>,
          "className": "header__nav",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <Link
                  className="header__nav-item"
                  replace={false}
                  to="/dashboard"
                >
                  <p>
                    Menu
                  </p>
                </Link>
              </li>,
              <li>
                <Link
                  className="header__nav-item"
                  replace={false}
                  to="/register"
                >
                  <p>
                    Settings
                  </p>
                </Link>
              </li>,
              <li>
                <div
                  className="header__nav-item"
                  onClick={[Function]}
                >
                  <p>
                    Logout
                  </p>
                </div>
              </li>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="header__nav-item"
                  replace={false}
                  to="/dashboard"
                >
                  <p>
                    Menu
                  </p>
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <p>
                    Menu
                  </p>,
                  "className": "header__nav-item",
                  "replace": false,
                  "to": "/dashboard",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Menu",
                  },
                  "ref": null,
                  "rendered": "Menu",
                  "type": "p",
                },
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="header__nav-item"
                  replace={false}
                  to="/register"
                >
                  <p>
                    Settings
                  </p>
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <p>
                    Settings
                  </p>,
                  "className": "header__nav-item",
                  "replace": false,
                  "to": "/register",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Settings",
                  },
                  "ref": null,
                  "rendered": "Settings",
                  "type": "p",
                },
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="header__nav-item"
                  onClick={[Function]}
                >
                  <p>
                    Logout
                  </p>
                </div>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <p>
                    Logout
                  </p>,
                  "className": "header__nav-item",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Logout",
                  },
                  "ref": null,
                  "rendered": "Logout",
                  "type": "p",
                },
                "type": "div",
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
        "type": "nav",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`should render the Navbar component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Navbar
    auth={
      Object {
        "isAuthenticated": false,
        "user": Object {},
      }
    }
    clearCurrentProfile={[MockFunction]}
    logoutUser={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <nav
        className="header__nav"
      >
        <ul>
          <li>
            <Link
              className="header__nav-item"
              replace={false}
              to="/login"
            >
              <p>
                Login
              </p>
            </Link>
          </li>
          <li>
            <Link
              className="header__nav-item"
              replace={false}
              to="/register"
            >
              <p>
                Register
              </p>
            </Link>
          </li>
        </ul>
      </nav>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <ul>
          <li>
            <Link
              className="header__nav-item"
              replace={false}
              to="/login"
            >
              <p>
                Login
              </p>
            </Link>
          </li>
          <li>
            <Link
              className="header__nav-item"
              replace={false}
              to="/register"
            >
              <p>
                Register
              </p>
            </Link>
          </li>
        </ul>,
        "className": "header__nav",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              <Link
                className="header__nav-item"
                replace={false}
                to="/login"
              >
                <p>
                  Login
                </p>
              </Link>
            </li>,
            <li>
              <Link
                className="header__nav-item"
                replace={false}
                to="/register"
              >
                <p>
                  Register
                </p>
              </Link>
            </li>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="header__nav-item"
                replace={false}
                to="/login"
              >
                <p>
                  Login
                </p>
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <p>
                  Login
                </p>,
                "className": "header__nav-item",
                "replace": false,
                "to": "/login",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Login",
                },
                "ref": null,
                "rendered": "Login",
                "type": "p",
              },
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="header__nav-item"
                replace={false}
                to="/register"
              >
                <p>
                  Register
                </p>
              </Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <p>
                  Register
                </p>,
                "className": "header__nav-item",
                "replace": false,
                "to": "/register",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Register",
                },
                "ref": null,
                "rendered": "Register",
                "type": "p",
              },
              "type": [Function],
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
      "type": "nav",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <nav
          className="header__nav"
        >
          <ul>
            <li>
              <Link
                className="header__nav-item"
                replace={false}
                to="/login"
              >
                <p>
                  Login
                </p>
              </Link>
            </li>
            <li>
              <Link
                className="header__nav-item"
                replace={false}
                to="/register"
              >
                <p>
                  Register
                </p>
              </Link>
            </li>
          </ul>
        </nav>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ul>
            <li>
              <Link
                className="header__nav-item"
                replace={false}
                to="/login"
              >
                <p>
                  Login
                </p>
              </Link>
            </li>
            <li>
              <Link
                className="header__nav-item"
                replace={false}
                to="/register"
              >
                <p>
                  Register
                </p>
              </Link>
            </li>
          </ul>,
          "className": "header__nav",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <Link
                  className="header__nav-item"
                  replace={false}
                  to="/login"
                >
                  <p>
                    Login
                  </p>
                </Link>
              </li>,
              <li>
                <Link
                  className="header__nav-item"
                  replace={false}
                  to="/register"
                >
                  <p>
                    Register
                  </p>
                </Link>
              </li>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="header__nav-item"
                  replace={false}
                  to="/login"
                >
                  <p>
                    Login
                  </p>
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <p>
                    Login
                  </p>,
                  "className": "header__nav-item",
                  "replace": false,
                  "to": "/login",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Login",
                  },
                  "ref": null,
                  "rendered": "Login",
                  "type": "p",
                },
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  className="header__nav-item"
                  replace={false}
                  to="/register"
                >
                  <p>
                    Register
                  </p>
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <p>
                    Register
                  </p>,
                  "className": "header__nav-item",
                  "replace": false,
                  "to": "/register",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Register",
                  },
                  "ref": null,
                  "rendered": "Register",
                  "type": "p",
                },
                "type": [Function],
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
        "type": "nav",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
